@@ -4,6 +4,7 @@ import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import com.google.gson.Gson;
@@ -23,14 +24,18 @@ public class LoginControler {
 		}
 		return false; // Inicio de sesión fallido
 	}
-
+	
 	private List<Usuario> cargarUsuariosDesdeJson() {
-		try (BufferedReader br = new BufferedReader(new FileReader(USUARIOS_JSON_FILE))) {
-			Gson gson = new Gson();
-			Usuario[] usuariosArray = gson.fromJson(br, Usuario[].class);
-			return usuariosArray != null ? List.of(usuariosArray) : new ArrayList<>();
-		} catch (IOException e) {
-			return new ArrayList<>();
-		}
+	    try (BufferedReader br = new BufferedReader(new FileReader(USUARIOS_JSON_FILE))) {
+	        Gson gson = new Gson();
+	        Usuario[] arrayUsuarios = gson.fromJson(br, Usuario[].class);
+	        if (arrayUsuarios != null) {
+	            return Arrays.asList(arrayUsuarios);  // Convierte el array a lista y la retorna
+	        }
+	    } catch (IOException e) {
+	        System.err.println("Error al leer el archivo: " + e.getMessage());
+	    }
+	    return new ArrayList<>();  // Retorna una lista vacía en caso de error o si el array es null
 	}
+
 }
